feat(wecom): map operators to userids (#89)
